- Add an option to avoid gap in the tab numbering when closing a tab.
- Add a /move_tab command, to move tabs.
- Add simple communication blocking support
  (http://xmpp.org/extensions/xep-0191.html).
- Add last activity support (http://xmpp.org/extensions/xep-0012.html).
- Add a /self command.
- Add a /runkey command.
- Support underlined text in the input with C-c u.

* Poezio 0.7.5.1 & 2 - Summer 2012
- Fix tracebacks caused by a change in Sleekxmpp

* Poezio 0.7.5 - 25 May 2012
- Plugin system
- Server-side bookmarks
- New keyboard shortcuts tuning options
- New keyboard shortcuts
- Attention support
- Invitation support
- Improved contact management
- New tab list
- Certificate check (TOFU model)
- New commands for sending stanzas manually
- bugfixes


* Poezio 0.7.2 - 08 Nov 2011
- Huge speed improvements in both memory usage, text
  refresh speed and interface resize.
- Chatstate notifications (in private AND in MUCs)
- /message command to talk to any JID
- /version command to get the software version of an entity
- /bind command, and keys can be bound in the config file
- Multiline edition
- xhtml-im messages can be sent and received
- 256 colors support
- themes are easier to create and load. They can use
  up to 256 colors
- completion now works not only at the end of the input
- /affiliation and /role commands to administrate MUCs
- /export command to export your roster in a file
- data forms support (only for room configuration at the moment)
- documentation is now written in asciidoc format
- a *lot* of bugfixes


* Poezio 0.7.1 - 2 Feb 2011
- /status command to globally change the status
- /win command now accepts part of tab name as argument
- bugfixes


* Poezio 0.7 - 14 jan 2011
Codename ”Koshie & Mathieui”
- Library changed from xmpppy to SleekXMPP
- Python 3 only
- Introduce the roster
- One to one conversations
- Roster search
- Add/remove/accept/deny contact in the roster
- Resizable mini-buffer displaying various informations